--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "",
-    "dev": "yarn run esm src/server.js",
+    "dev": "nodemon -r esm src/server.js",
     "serve": ""
   },
   "dependencies": {
@@ -16,6 +16,10 @@
     "graphql": "^14.5.6"
   },
   "devDependencies": {
-    "esm": "^3.2.25"
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.4.0",
+    "eslint-plugin-graphql": "^3.1.0",
+    "esm": "^3.2.25",
+    "nodemon": "^1.19.2"
   }
 }
