--- a/server/package.json
+++ b/server/package.json
@@ -7,19 +7,25 @@
   "license": "MIT",
   "scripts": {
     "build": "",
-    "dev": "nodemon -r esm src/server.js",
+    "dev": "nodemon --exec babel-node src/server.js",
     "serve": ""
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
-    "graphql": "^14.5.6"
+    "graphql": "^14.5.6",
+    "graphql-tag": "^2.10.1",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/node": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import-graphql": "^2.7.0",
     "eslint": "^6.4.0",
     "eslint-plugin-graphql": "^3.1.0",
-    "esm": "^3.2.25",
     "nodemon": "^1.19.2"
   }
 }
