--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,7 @@
     "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
     "graphql": "^14.5.6",
-    "graphql-tag": "^2.10.1",
-    "node-fetch": "^2.6.0"
+    "graphql-tag": "^2.10.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
@@ -23,7 +22,6 @@
     "@babel/node": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "babel-eslint": "^10.0.3",
-    "babel-plugin-import-graphql": "^2.7.0",
     "eslint": "^6.4.0",
     "eslint-plugin-graphql": "^3.1.0",
     "nodemon": "^1.19.2"
