--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
+    "babel-plugin-import-graphql": "^2.7.0",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1"
   },
