--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.4.0",
     "eslint-plugin-graphql": "^3.1.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.2"
   }
 }
