--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
-    "babel-plugin-import-graphql": "^2.7.0",
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1"
   },
@@ -25,6 +24,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.4.0",
     "eslint-plugin-graphql": "^3.1.0",
+    "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.2"
   }
