--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "",
     "dev": "nodemon --exec babel-node server.js",
-    "serve": ""
+    "test": "jest"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.6.4",
