--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "",
-    "dev": "nodemon --exec babel-node server.js",
+    "dev": "NODE_ENV=development nodemon --exec babel-node server.js",
     "test": "jest"
   },
   "dependencies": {
