--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
     "graphql": "^14.5.6",
-    "graphql-tag": "^2.10.1"
+    "graphql-tag": "^2.10.1",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
