--- a/server/package.json
+++ b/server/package.json
@@ -36,5 +36,8 @@
     "jest": "^24.9.0",
     "nodemon": "^2.0.4",
     "prettier": "^1.18.2"
+  },
+  "resolutions": {
+    "object-path": ">=0.11.5"
   }
 }
